Upgraded to Liferay 7.4 U1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,9 @@
-liferay.workspace.modules.dir = modules
-microsoft.translator.subscription.key = 
-liferay.workspace.product = dxp-7.4-ga1
-target.platform.index.sources = false
+##
+## Check GETTING_STARTED.markdown for additional properties and their default
+## values.
+##
+liferay.workspace.modules.dir=modules
+liferay.workspace.themes.dir=themes
+liferay.workspace.wars.dir=modules
+microsoft.translator.subscription.key=
+liferay.workspace.product=dxp-7.4-u1
