--- a/modules/headless-dealer/headless-dealer-impl/build.gradle
+++ b/modules/headless-dealer/headless-dealer-impl/build.gradle
@@ -1,17 +1,3 @@
-buildscript {
-	dependencies {
-		classpath group: "com.liferay", name: "com.liferay.gradle.plugins.rest.builder", version: "1.0.114"
-	}
-
-	repositories {
-		maven {
-			url "https://repository-cdn.liferay.com/nexus/content/groups/public"
-		}
-	}
-}
-
-apply plugin: "com.liferay.portal.tools.rest.builder"
-
 repositories {
    flatDir {
        dirs '../../../libs'
@@ -19,27 +5,31 @@ repositories {
 }
 
 dependencies {
+    compile name: "com.liferay.postcodes.api-1.0.0"
     compile project(":modules:dealer:dealer-api")
 	compile project(":modules:headless-dealer:headless-dealer-api")
-    compile name: "com.liferay.postcodes.api-1.0.0"
-
-	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: "2.10.3"
+	
+	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: "2.12.4"
+	compileOnly group: "com.liferay", name: "com.liferay.headless.common.spi"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.function"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.string"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.odata.api"
-	compileOnly group: "com.liferay", name: "com.liferay.portal.vulcan.api", version: "7.7.1"
+	compileOnly group: "com.liferay", name: "com.liferay.portal.vulcan.api", version: "9.2.1"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.impl"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
 	compileOnly group: "commons-collections", name: "commons-collections"
 	compileOnly group: "io.swagger.core.v3", name: "swagger-annotations", version: "2.0.5"
+	compileOnly group: "javax.annotation", name: "javax.annotation-api", version: "1.3.2"
 	compileOnly group: "javax.validation", name: "validation-api", version: "2.0.1.Final"
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api"
 	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
-	compileOnly group: "org.osgi", name: "org.osgi.service.component", version: "1.3.0"
+	compileOnly (group: "org.osgi", name: "org.osgi.service.component", version: "1.3.0") {force = true}
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
 	compileOnly group: "org.osgi", name: "org.osgi.core"
 	compileOnly group: "org.slf4j", name: "slf4j-api"
-	compileOnly group: "com.liferay", name: "com.liferay.headless.common.spi"
-	
-	restBuilder group: "com.liferay", name: "com.liferay.portal.tools.rest.builder", version: "1.0.114"
+
+	restBuilder group: "com.liferay", name: "com.liferay.portal.tools.rest.builder", version: "1.0.216"
+
 }
+
+group = "headless-dealer"
