Integrated with the Asset Framework

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ liferay.workspace.themes.dir=themes
 liferay.workspace.wars.dir=modules
 microsoft.translator.subscription.key=
 liferay.workspace.product=dxp-7.4-u1
+target.platform.index.sources = false
+org.gradle.java.home=C:/dev/java/jdk1.8.0_281
